--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   device_info_plus: ^6.0.0
   location_permissions: ^4.0.0
   get: ^4.6.5
+  flutter_blue_plus: ^1.3.1
 
 dev_dependencies:
   flutter_test:
